# EdgeUI-Example

./: .gitignore  .gitmodules  CMakeLists.txt  MQTTData.cpp  MQTTData.h  README.md  TinyJson.h  TinyTools.cpp  TinyTools.h  i2c_device.cpp  i2c_device.h  main.cpp  makeit.sh  runit.sh  sgp30.cpp  sgp30.h
icons/: download.sh
